--- a/SpotDown V2/SpotDown V2/SpotDown V2.csproj
+++ b/SpotDown V2/SpotDown V2/SpotDown V2.csproj
@@ -193,6 +193,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="bin\ffmpeg.exe" />
+    <None Include="ffmpeg.exe" />
     <Content Include="FodyWeavers.xml" />
     <Content Include="Xenatt-The-Circle-App-Spotify.ico" />
   </ItemGroup>
