Cleaned up some of the messy code

--- a/SpotDown V2/SpotDown V2/SpotDown V2.csproj
+++ b/SpotDown V2/SpotDown V2/SpotDown V2.csproj
@@ -114,6 +114,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Helper.cs" />
+    <Compile Include="Classes\ListViewData.cs" />
+    <Compile Include="Classes\PassArguments.cs" />
     <Compile Include="Components\AbortableBackgroundWorker.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -128,19 +131,19 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Classes\YouTubeVideoQuality.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Components\ListViewNF.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
